# devsim

./: CMakeLists.txt
cmake/: auto.cmake  generate.cmake
src/: CMakeLists.txt
src/AutoEquation/: CMakeLists.txt
src/Circuit/data/: CMakeLists.txt
src/Circuit/models/ideal/: CMakeLists.txt
src/Circuit/models/sources/: CMakeLists.txt
src/Data/: CMakeLists.txt
src/Equation/: CMakeLists.txt
src/GeomModels/: CMakeLists.txt
src/Geometry/: CMakeLists.txt
src/MathEval/: CMakeLists.txt
src/adiff/: CMakeLists.txt
src/commands/: CMakeLists.txt
src/errorSystem/: CMakeLists.txt
src/main/: CMakeLists.txt
src/math/: CMakeLists.txt
src/meshing/: CMakeLists.txt
src/models/: CMakeLists.txt
src/myThread/: CMakeLists.txt
src/pythonapi/: CMakeLists.txt
src/tclapi/: CMakeLists.txt
src/utility/: CMakeLists.txt
